--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_accessibility_service: ^1.0.1
+  # ভার্সন সমস্যা সমাধানের জন্য এখানে "any" ব্যবহার করছি
+  flutter_accessibility_service: any
 
 dev_dependencies:
   flutter_test:
@@ -17,4 +18,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
+  
